--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "repository": "https://github.com/siddeshwarnavink/president-plum-bot",
   "author": "Siddeshwar",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
