--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-  	"start": "node bot.js",
-	"dev": "nodemon bot.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
   },
   "dependencies": {
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
